add support for react-native-photo-view

--- a/manifest.json
+++ b/manifest.json
@@ -237,7 +237,8 @@
       "react-native-fbsdk@0.7.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-search-bar@3.4.2",
-      "react-native-simple-toast@0.0.8"
+      "react-native-simple-toast@0.0.8",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -266,7 +267,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"    
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -295,7 +297,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -324,7 +327,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -353,7 +357,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -382,7 +387,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.3.1"]
   },
@@ -411,7 +417,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.4.1"]
   },
@@ -440,7 +447,8 @@
       "react-native-image-picker@0.26.10",
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8",
-      "react-native-view-overflow@0.0.3"
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2"
     ],
     "targetJsDependencies": ["react@16.4.1"]
   }
