--- a/plugins/ern_v0.17.0+/react-native-photo-view_v1.5.2+/config.json
+++ b/plugins/ern_v0.17.0+/react-native-photo-view_v1.5.2+/config.json
@@ -1,9 +1,10 @@
 {
 	"android": {
+			"root": "",
 			"moduleName": "android",
 			"dependencies": [
 				"com.facebook.fresco:fresco:0.11.0",
 				"me.relex:photodraweeview:1.0.0"
 			]
-	  }
+		}
 }
