--- a/plugins/ern_v0.13.0+/react-native-wkwebview-reborn_v1.22.0+/config.json
+++ b/plugins/ern_v0.13.0+/react-native-wkwebview-reborn_v1.22.0+/config.json
@@ -1,7 +1,7 @@
 {
 	"ios": {
 		"copy": [{
-			"source": "ios/**",
+			"source": "ios/*",
 			"dest": "{{{projectName}}}/Libraries/RCTWKWebView"
 		}],
 		"pbxproj": {
