lock the com.facebook.android:facebook-android-sdk

--- a/plugins/ern_v0.13.0+/react-native-fbsdk_v0.5.0+/config.json
+++ b/plugins/ern_v0.13.0+/react-native-fbsdk_v0.5.0+/config.json
@@ -3,7 +3,7 @@
     "root": "",
     "moduleName": "android",
     "dependencies": [
-      "com.facebook.android:facebook-android-sdk:4.+"
+      "com.facebook.android:facebook-android-sdk:4.37.0"
     ]
   },
   "ios": {
