--- a/manifest.json
+++ b/manifest.json
@@ -455,6 +455,37 @@
     "targetJsDependencies": ["react@16.4.1"]
   },
   {
+    "platformVersion": "0.26.x",
+    "targetNativeDependencies": [
+      "react-native@0.57.5",
+      "react-native-electrode-bridge@1.5.16",
+      "react-native-maps@0.22.1",
+      "react-native-vector-icons@6.1.0",
+      "react-native-linear-gradient@2.4.4",
+      "react-native-code-push@5.4.2",
+      "react-native-android-settings-library@1.0.5",
+      "react-native-llimageview@0.0.11",
+      "react-native-lluploader@0.1.5",
+      "react-native-llphotoassets@0.0.3",
+      "react-native-svg@8.0.8",
+      "react-native-exif@0.4.0",
+      "react-native-view-shot@2.5.0",
+      "react-native-camera@1.4.2",
+      "react-native-permissions@1.1.1",
+      "react-native-keep-awake@4.0.0",
+      "react-native-location@1.0.0",
+      "react-native-fbsdk@0.8.0",
+      "react-native-electrode-ota@0.0.1",
+      "react-native-image-picker@0.27.1",
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8",
+      "react-native-view-overflow@0.0.3",
+      "react-native-photo-view@1.5.2",
+      "react-native-wkwebview-reborn@2.0.0"
+    ],
+    "targetJsDependencies": ["react@16.6.1"]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.57.5",
