--- a/manifest.json
+++ b/manifest.json
@@ -550,7 +550,7 @@
   {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
-      "react-native@0.57.8",
+      "react-native@0.58.0-rc.2",
       "react-native-electrode-bridge@1.5.16",
       "react-native-maps@0.22.1",
       "react-native-vector-icons@6.1.0",
