--- a/manifest.json
+++ b/manifest.json
@@ -543,7 +543,13 @@
       "react-native-simple-toast@0.0.8",
       "react-native-view-overflow@0.0.4",
       "react-native-photo-view@1.5.2",
-      "react-native-wkwebview-reborn@2.0.0"
+      "react-native-wkwebview-reborn@2.0.0",
+      "react-native-device-info@0.24.3",
+      "react-native-version-number@0.3.4",
+      "react-native-splash-screen@3.1.1",
+      "appcenter-analytics@1.11.0",
+      "appcenter@1.11.0",
+      "appcenter-crashes@1.11.0"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   },
@@ -575,7 +581,12 @@
       "react-native-view-overflow@0.0.4",
       "react-native-photo-view@1.5.2",
       "react-native-wkwebview-reborn@2.0.0",
-      "react-native-device-info@0.24.3"
+      "react-native-device-info@0.24.3",
+      "react-native-version-number@0.3.4",
+      "react-native-splash-screen@3.1.1",
+      "appcenter-analytics@1.11.0",
+      "appcenter@1.11.0",
+      "appcenter-crashes@1.11.0"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   }
