--- a/manifest.json
+++ b/manifest.json
@@ -584,7 +584,12 @@
       "react-native-version-number@0.3.4",
       "appcenter-analytics@1.11.0",
       "appcenter@1.11.0",
-      "appcenter-crashes@1.11.0"
+      "appcenter-crashes@1.11.0",
+      "react-native-android-wifi@0.0.39",
+      "react-native-fs@2.13.3",
+      "react-native-network-info@4.0.1",
+      "react-native-orientation@3.1.3",
+      "react-native-sound@0.10.12"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   },
@@ -620,7 +625,12 @@
       "react-native-version-number@0.3.4",
       "appcenter-analytics@1.11.0",
       "appcenter@1.11.0",
-      "appcenter-crashes@1.11.0"
+      "appcenter-crashes@1.11.0",
+      "react-native-android-wifi@0.0.39",
+      "react-native-fs@2.13.3",
+      "react-native-network-info@4.0.1",
+      "react-native-orientation@3.1.3",
+      "react-native-sound@0.10.12"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   }
