--- a/manifest.json
+++ b/manifest.json
@@ -548,7 +548,9 @@
       "react-native-version-number@0.3.4",
       "appcenter-analytics@1.11.0",
       "appcenter@1.11.0",
-      "appcenter-crashes@1.11.0"
+      "appcenter-crashes@1.11.0",
+      "lottie-ios@2.5.0",
+      "lottie-react-native@2.5.11"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   },
@@ -585,6 +587,8 @@
       "appcenter-analytics@1.11.0",
       "appcenter@1.11.0",
       "appcenter-crashes@1.11.0",
+      "lottie-ios@2.5.0",
+      "lottie-react-native@2.5.11",
       "react-native-android-wifi@0.0.39",
       "react-native-fs@2.13.3",
       "react-native-network-info@4.0.1",
@@ -626,6 +630,8 @@
       "appcenter-analytics@1.11.0",
       "appcenter@1.11.0",
       "appcenter-crashes@1.11.0",
+      "lottie-ios@2.5.0",
+      "lottie-react-native@2.5.11",
       "react-native-android-wifi@0.0.39",
       "react-native-fs@2.13.3",
       "react-native-network-info@4.0.1",
