--- a/manifest.json
+++ b/manifest.json
@@ -636,7 +636,8 @@
       "react-native-fs@2.13.3",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
-      "react-native-sound@0.10.12"
+      "react-native-sound@0.10.12",
+      "sentry-ios-sdk@4.2.1"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   }
