--- a/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
@@ -5,5 +5,18 @@
     "dependencies": [
       "io.sentry:sentry-android:1.7.5"
     ]
+  },
+  "ios": {
+    "copy": [
+      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/RNSentry" }
+    ],
+    "pbxproj": {
+        "addProject": [
+        { "path": "RNSentry/RNSentry.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libRNSentry.a.a", "target": "RNSentry" } ] }
+      ],
+      "addHeaderSearchPath": [
+        "\"$(SRCROOT)/{{{projectName}}}/Libraries/RNSentry/**\""
+      ]
+    }
   }
 }
