Update react-native-sentry config

--- a/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
@@ -8,7 +8,7 @@
   },
   "ios": {
     "copy": [
-      { "source": "ios/**", "dest": "{{{projectName}}}/Libraries/RNSentry" }
+      { "source": "ios/*", "dest": "{{{projectName}}}/Libraries/RNSentry" }
     ],
     "pbxproj": {
         "addProject": [
