Fix react-native-sentry for iOS

--- a/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-sentry_v0.41.1+/config.json
@@ -12,7 +12,7 @@
     ],
     "pbxproj": {
         "addProject": [
-        { "path": "RNSentry/RNSentry.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libRNSentry.a.a", "target": "RNSentry" } ] }
+        { "path": "RNSentry/RNSentry.xcodeproj", "group": "Libraries", "staticLibs": [ { "name": "libRNSentry.a", "target": "RNSentry" } ] }
       ],
       "addHeaderSearchPath": [
         "\"$(SRCROOT)/{{{projectName}}}/Libraries/RNSentry/**\""
