--- a/manifest.json
+++ b/manifest.json
@@ -607,9 +607,9 @@
       "react-native-linear-gradient@2.5.3",
       "react-native-code-push@5.5.2",
       "react-native-android-settings-library@1.0.5",
-      "react-native-llimageview": "1.0.1",
-      "react-native-llphotoassets": "0.1.11",
-      "react-native-lluploader": "0.4.2",
+      "react-native-llimageview@1.0.1",
+      "react-native-llphotoassets@0.1.11",
+      "react-native-lluploader@0.4.2",
       "react-native-svg@8.0.10",
       "react-native-exif@0.4.0",
       "react-native-view-shot@2.5.0",
