--- a/manifest.json
+++ b/manifest.json
@@ -593,8 +593,7 @@
       "react-native-fs@2.13.3",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
-      "react-native-sound@0.10.12",
-      "react-native-admob@2.0.0-beta.5"
+      "react-native-sound@0.10.12"
     ],
     "targetJsDependencies": ["react@16.6.3"]
   },
@@ -638,8 +637,7 @@
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12",
-      "react-native-sentry@0.41.1",
-      "react-native-admob@2.0.0-beta.5"
+      "react-native-sentry@0.41.1"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
