--- a/manifest.json
+++ b/manifest.json
@@ -601,6 +601,50 @@
   {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
+      "react-native@0.57.8",
+      "react-native-electrode-bridge@1.5.17",
+      "react-native-maps@0.22.1",
+      "react-native-vector-icons@6.1.0",
+      "react-native-linear-gradient@2.5.3",
+      "react-native-code-push@5.4.2",
+      "react-native-android-settings-library@1.0.5",
+      "react-native-llimageview@0.0.11",
+      "react-native-lluploader@0.1.5",
+      "react-native-llphotoassets@0.0.3",
+      "react-native-svg@8.0.10",
+      "react-native-exif@0.4.0",
+      "react-native-view-shot@2.5.0",
+      "react-native-camera@1.6.4",
+      "react-native-permissions@1.1.1",
+      "react-native-keep-awake@4.0.0",
+      "react-native-location@1.0.0",
+      "react-native-fbsdk@0.8.0",
+      "react-native-electrode-ota@0.0.1",
+      "react-native-image-picker@0.27.2",
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8",
+      "react-native-view-overflow@0.0.4",
+      "react-native-photo-view@1.5.2",
+      "react-native-wkwebview-reborn@2.0.0",
+      "react-native-device-info@0.24.3",
+      "react-native-version-number@0.3.4",
+      "appcenter-analytics@1.11.0",
+      "appcenter@1.11.0",
+      "appcenter-crashes@1.11.0",
+      "lottie-ios@2.5.0",
+      "lottie-react-native@2.5.11",
+      "react-native-android-wifi@0.0.39",
+      "react-native-fs@2.13.3",
+      "react-native-network-info@4.0.1",
+      "react-native-orientation@3.1.3",
+      "react-native-sound@0.10.12",
+      "react-native-admob@2.0.0-beta.5"
+    ],
+    "targetJsDependencies": ["react@16.6.3"]
+  },
+  {
+    "platformVersion": "1001.0.0",
+    "targetNativeDependencies": [
       "react-native@0.59.0",
       "react-native-electrode-bridge@1.5.17",
       "react-native-maps@0.23.0",
