--- a/manifest.json
+++ b/manifest.json
@@ -727,7 +727,8 @@
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
-      "react-native-admob@2.0.0-beta.5"
+      "react-native-admob@2.0.0-beta.5",
+      "realm@2.27.0"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -772,7 +773,8 @@
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
-      "react-native-admob@2.0.0-beta.5"
+      "react-native-admob@2.0.0-beta.5",
+      "realm@2.27.0"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
