--- a/manifest.json
+++ b/manifest.json
@@ -728,7 +728,8 @@
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
-      "realm@2.27.0"
+      "realm@2.27.0",
+      "react-native-fast-image@5.3.0"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -774,7 +775,8 @@
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
-      "realm@2.27.0"
+      "realm@2.27.0",
+      "react-native-fast-image@5.3.0"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
