Add ios config for react-native-device-info

--- a/plugins/ern_v0.14.0+/react-native-device-info_v0.21.5+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-device-info_v0.21.5+/config.json
@@ -5,5 +5,24 @@
 		"dependencies": [
 			"com.google.android.gms:play-services-gcm:16.0.0"
 		]
+	},
+	"ios": {
+		"copy": [{
+			"source": "ios/*",
+			"dest": "{{{projectName}}}/Libraries/RNDeviceInfo"
+		}],
+		"pbxproj": {
+			"addProject": [{
+				"path": "RNDeviceInfo/RNDeviceInfo.xcodeproj",
+				"group": "Libraries",
+				"staticLibs": [{
+					"name": "libRNDeviceInfo.a",
+					"target": "RNDeviceInfo"
+				}]
+			}],
+			"addHeaderSearchPath": [
+				"\"$(SRCROOT)/{{{projectName}}}/Libraries/RNDeviceInfo/**\""
+			]
+		}
 	}
 }
