--- a/manifest.json
+++ b/manifest.json
@@ -823,7 +823,8 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.28.1",
-      "react-native-fast-image@5.4.2"
+      "react-native-fast-image@5.4.2",
+      "react-native-system-setting@1.7.2"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -870,7 +871,8 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.28.1",
-      "react-native-fast-image@5.4.2"
+      "react-native-fast-image@5.4.2",
+      "react-native-system-setting@1.7.2"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
