--- a/manifest.json
+++ b/manifest.json
@@ -729,7 +729,9 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.27.0",
-      "react-native-fast-image@5.3.0"
+      "react-native-fast-image@5.3.0",
+      "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/netinfo@3.2.1"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -776,7 +778,9 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.27.0",
-      "react-native-fast-image@5.3.0"
+      "react-native-fast-image@5.3.0",
+      "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/netinfo@3.2.1"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -823,7 +827,9 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.28.1",
-      "react-native-fast-image@5.4.2"
+      "react-native-fast-image@5.4.2",
+      "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/netinfo@3.2.1"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -870,7 +876,9 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
       "realm@2.28.1",
-      "react-native-fast-image@5.4.2"
+      "react-native-fast-image@5.4.2",
+      "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/netinfo@3.2.1"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
