--- a/plugins/ern_v0.14.0+/@react-native-community/async-storage_v1.5.0+/config.json
+++ b/plugins/ern_v0.14.0+/@react-native-community/async-storage_v1.5.0+/config.json
@@ -8,10 +8,10 @@
   },
   "ios": {
     "copy": [
-      {
-        "dest": "{{{projectName}}}/Libraries/RNCAsyncStorage",
-        "source": "ios/**"
-      }
+        {"source": "ios/RNCAsyncStorage.h", "dest": "{{{projectName}}}/Libraries/RNCAsyncStorage"},
+        {"source": "ios/RNCAsyncStorage.m", "dest": "{{{projectName}}}/Libraries/RNCAsyncStorage"},
+        {"source": "ios/RNCAsyncStorage.xcodeproj", "dest": "{{{projectName}}}/Libraries/RNCAsyncStorage"},
+        {"source": "ios/RNCAsyncStorageDelegate.h", "dest": "{{{projectName}}}/Libraries/RNCAsyncStorage"}
     ],
     "pbxproj": {
       "addHeaderSearchPath": [
