update the manifest file: @react-native-community/geolocation

--- a/manifest.json
+++ b/manifest.json
@@ -878,7 +878,8 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
-      "@react-native-community/netinfo@3.2.1"
+      "@react-native-community/netinfo@3.2.1",
+      "@react-native-community/geolocation@2.0.2"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -927,7 +928,8 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
-      "@react-native-community/netinfo@3.2.1"
+      "@react-native-community/netinfo@3.2.1",
+      "@react-native-community/geolocation@2.0.2"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   },
@@ -976,7 +978,8 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
-      "@react-native-community/netinfo@3.2.1"
+      "@react-native-community/netinfo@3.2.1",
+      "@react-native-community/geolocation@2.0.2"
     ],
     "targetJsDependencies": [
       "react@16.8.3"
@@ -1027,7 +1030,8 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
-      "@react-native-community/netinfo@3.2.1"
+      "@react-native-community/netinfo@3.2.1",
+      "@react-native-community/geolocation@2.0.2"
     ],
     "targetJsDependencies": ["react@16.8.3"]
   }
