Add react-native-webview plugin support

--- a/manifest.json
+++ b/manifest.json
@@ -979,7 +979,8 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/netinfo@3.2.1",
-      "@react-native-community/geolocation@2.0.2"
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-webview@7.0.5"
     ],
     "targetJsDependencies": [
       "react@16.8.3"
@@ -1031,7 +1032,8 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/netinfo@3.2.1",
-      "@react-native-community/geolocation@2.0.2"
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-webview@7.0.5"
     ],
     "targetJsDependencies": ["react@16.8.6"]
   }
