--- a/manifest.json
+++ b/manifest.json
@@ -970,6 +970,7 @@
       "lottie-react-native@2.6.1",
       "react-native-android-wifi@0.0.41",
       "react-native-fs@2.13.3",
+      "react-native-gesture-handler@1.4.1",      
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12",
@@ -1022,6 +1023,7 @@
       "lottie-react-native@2.6.1",
       "react-native-android-wifi@0.0.41",
       "react-native-fs@2.13.3",
+      "react-native-gesture-handler@1.4.1",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12",
