--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,9 @@
       "react-native@0.48.3",
       "react-native-electrode-bridge@1.5.10"
     ],
-    "targetJsDependencies": ["react@16.0.0-alpha.12"]
+    "targetJsDependencies": [
+      "react@16.0.0-alpha.12"
+    ]
   },
   {
     "platformVersion": "0.7.x",
@@ -34,7 +36,9 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": ["react@16.0.0-alpha.12"]
+    "targetJsDependencies": [
+      "react@16.0.0-alpha.12"
+    ]
   },
   {
     "platformVersion": "0.8.x",
@@ -46,7 +50,9 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": ["react@16.0.0-beta.5"]
+    "targetJsDependencies": [
+      "react@16.0.0-beta.5"
+    ]
   },
   {
     "platformVersion": "0.9.x",
@@ -58,7 +64,9 @@
       "react-native-linear-gradient@2.3.0",
       "react-native-code-push@5.1.3-beta"
     ],
-    "targetJsDependencies": ["react@16.0.0-beta.5"]
+    "targetJsDependencies": [
+      "react@16.0.0-beta.5"
+    ]
   },
   {
     "platformVersion": "0.10.x",
@@ -71,7 +79,9 @@
       "react-native-code-push@5.1.3-beta",
       "react-native-android-settings-library@1.0.3"
     ],
-    "targetJsDependencies": ["react@16.0.0"]
+    "targetJsDependencies": [
+      "react@16.0.0"
+    ]
   },
   {
     "platformVersion": "0.11.x",
@@ -87,7 +97,9 @@
       "react-native-lluploader@0.1.0",
       "react-native-llphotoassets@0.0.2"
     ],
-    "targetJsDependencies": ["react@16.0.0"]
+    "targetJsDependencies": [
+      "react@16.0.0"
+    ]
   },
   {
     "platformVersion": "0.12.x",
@@ -103,7 +115,9 @@
       "react-native-lluploader@0.1.0",
       "react-native-llphotoassets@0.0.2"
     ],
-    "targetJsDependencies": ["react@16.2.0"]
+    "targetJsDependencies": [
+      "react@16.2.0"
+    ]
   },
   {
     "platformVersion": "0.13.x",
@@ -122,7 +136,9 @@
       "react-native-exif@0.1.7",
       "react-native-view-shot@2.3.0"
     ],
-    "targetJsDependencies": ["react@16.2.0"]
+    "targetJsDependencies": [
+      "react@16.2.0"
+    ]
   },
   {
     "platformVersion": "0.14.x",
@@ -142,7 +158,9 @@
       "react-native-view-shot@2.3.0",
       "react-native-camera@1.0.1"
     ],
-    "targetJsDependencies": ["react@16.2.0"]
+    "targetJsDependencies": [
+      "react@16.2.0"
+    ]
   },
   {
     "platformVersion": "0.15.x",
@@ -163,7 +181,9 @@
       "react-native-camera@1.0.2",
       "react-native-permissions@1.1.1"
     ],
-    "targetJsDependencies": ["react@16.3.0-alpha.1"]
+    "targetJsDependencies": [
+      "react@16.3.0-alpha.1"
+    ]
   },
   {
     "platformVersion": "0.16.x",
@@ -185,7 +205,9 @@
       "react-native-permissions@1.1.1",
       "react-native-fbsdk@0.7.0"
     ],
-    "targetJsDependencies": ["react@16.3.0-alpha.1"]
+    "targetJsDependencies": [
+      "react@16.3.0-alpha.1"
+    ]
   },
   {
     "platformVersion": "0.17.x",
@@ -212,7 +234,9 @@
       "react-native-search-bar@3.4.2",
       "react-native-simple-toast@0.0.8"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.18.x",
@@ -240,7 +264,9 @@
       "react-native-simple-toast@0.0.8",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.19.x",
@@ -270,7 +296,9 @@
       "react-native-view-overflow@0.0.3",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.20.x",
@@ -300,7 +328,9 @@
       "react-native-view-overflow@0.0.3",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.21.x",
@@ -330,7 +360,9 @@
       "react-native-view-overflow@0.0.3",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.22.x",
@@ -360,7 +392,9 @@
       "react-native-view-overflow@0.0.3",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.23.x",
@@ -390,7 +424,9 @@
       "react-native-view-overflow@0.0.3",
       "react-native-photo-view@1.5.2"
     ],
-    "targetJsDependencies": ["react@16.3.1"]
+    "targetJsDependencies": [
+      "react@16.3.1"
+    ]
   },
   {
     "platformVersion": "0.24.x",
@@ -421,7 +457,9 @@
       "react-native-photo-view@1.5.2",
       "react-native-wkwebview-reborn@1.22.0"
     ],
-    "targetJsDependencies": ["react@16.4.1"]
+    "targetJsDependencies": [
+      "react@16.4.1"
+    ]
   },
   {
     "platformVersion": "0.25.x",
@@ -452,7 +490,9 @@
       "react-native-photo-view@1.5.2",
       "react-native-wkwebview-reborn@1.22.0"
     ],
-    "targetJsDependencies": ["react@16.4.1"]
+    "targetJsDependencies": [
+      "react@16.4.1"
+    ]
   },
   {
     "platformVersion": "0.26.x",
@@ -483,7 +523,9 @@
       "react-native-photo-view@1.5.2",
       "react-native-wkwebview-reborn@2.0.0"
     ],
-    "targetJsDependencies": ["react@16.6.1"]
+    "targetJsDependencies": [
+      "react@16.6.1"
+    ]
   },
   {
     "platformVersion": "0.27.x",
@@ -514,7 +556,9 @@
       "react-native-photo-view@1.5.2",
       "react-native-wkwebview-reborn@2.0.0"
     ],
-    "targetJsDependencies": ["react@16.6.1"]
+    "targetJsDependencies": [
+      "react@16.6.1"
+    ]
   },
   {
     "platformVersion": "0.28.x",
@@ -552,7 +596,9 @@
       "lottie-ios@2.5.0",
       "lottie-react-native@2.5.11"
     ],
-    "targetJsDependencies": ["react@16.6.3"]
+    "targetJsDependencies": [
+      "react@16.6.3"
+    ]
   },
   {
     "platformVersion": "0.29.x",
@@ -595,7 +641,9 @@
       "react-native-orientation@3.1.3",
       "react-native-sound@0.10.12"
     ],
-    "targetJsDependencies": ["react@16.6.3"]
+    "targetJsDependencies": [
+      "react@16.6.3"
+    ]
   },
   {
     "platformVersion": "0.30.x",
@@ -639,9 +687,11 @@
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
-   },
-   {
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
+  },
+  {
     "platformVersion": "0.31.x",
     "targetNativeDependencies": [
       "react-native@0.59.4",
@@ -684,7 +734,9 @@
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.32.x",
@@ -733,7 +785,9 @@
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/netinfo@3.2.1"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.33.x",
@@ -782,7 +836,9 @@
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/netinfo@3.2.1"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.34.x",
@@ -831,7 +887,9 @@
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/netinfo@3.2.1"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.35.x",
@@ -881,7 +939,9 @@
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.36.x",
@@ -931,7 +991,9 @@
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2"
     ],
-    "targetJsDependencies": ["react@16.8.3"]
+    "targetJsDependencies": [
+      "react@16.8.3"
+    ]
   },
   {
     "platformVersion": "0.37.x",
@@ -985,8 +1047,8 @@
     "targetJsDependencies": [
       "react@16.8.3"
     ]
-   },
-   {
+  },
+  {
     "platformVersion": "0.38.x",
     "targetNativeDependencies": [
       "react-native@0.60.5",
@@ -1035,7 +1097,9 @@
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2"
     ],
-    "targetJsDependencies": ["react@16.8.6"]
+    "targetJsDependencies": [
+      "react@16.8.6"
+    ]
   },
   {
     "platformVersion": "1000.0.0",
@@ -1086,6 +1150,8 @@
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2"
     ],
-    "targetJsDependencies": ["react@16.8.6"]
+    "targetJsDependencies": [
+      "react@16.8.6"
+    ]
   }
 ]
