--- a/manifest.json
+++ b/manifest.json
@@ -1068,7 +1068,6 @@
       "react-native-permissions@1.1.1",
       "react-native-keep-awake@4.0.0",
       "react-native-location@1.0.0",
-      "react-native-fbsdk@0.8.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.28.1",
       "react-native-search-bar@3.4.2",
@@ -1095,7 +1094,8 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/netinfo@3.2.1",
-      "@react-native-community/geolocation@2.0.2"
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-fbsdk@1.0.4"
     ],
     "targetJsDependencies": [
       "react@16.8.6"
@@ -1121,7 +1121,6 @@
       "react-native-permissions@1.1.1",
       "react-native-keep-awake@4.0.0",
       "react-native-location@1.0.0",
-      "react-native-fbsdk@0.8.0",
       "react-native-electrode-ota@0.0.1",
       "react-native-image-picker@0.28.1",
       "react-native-search-bar@3.4.2",
@@ -1148,7 +1147,8 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/netinfo@3.2.1",
-      "@react-native-community/geolocation@2.0.2"
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-fbsdk@1.0.4"
     ],
     "targetJsDependencies": [
       "react@16.8.6"
