--- a/manifest.json
+++ b/manifest.json
@@ -1109,6 +1109,60 @@
     ]
   },
   {
+    "platformVersion": "0.39.x",
+    "targetNativeDependencies": [
+      "react-native@0.60.6",
+      "react-native-electrode-bridge@1.5.23",
+      "react-native-maps@0.24.2",
+      "react-native-vector-icons@6.5.0",
+      "react-native-linear-gradient@2.5.4",
+      "react-native-code-push@5.6.0",
+      "react-native-android-settings-library@1.0.5",
+      "react-native-llimageview@1.0.1",
+      "react-native-llphotoassets@0.1.11",
+      "react-native-lluploader@0.4.2",
+      "react-native-svg@8.0.10",
+      "react-native-exif@0.4.0",
+      "react-native-view-shot@2.6.0",
+      "react-native-camera@1.13.1",
+      "react-native-permissions@1.1.1",
+      "react-native-keep-awake@4.0.0",
+      "react-native-location@1.0.0",
+      "react-native-electrode-ota@0.0.1",
+      "react-native-image-picker@0.28.1",
+      "react-native-search-bar@3.4.2",
+      "react-native-simple-toast@0.0.8",
+      "react-native-view-overflow@0.0.4",
+      "react-native-photo-view@1.5.2",
+      "react-native-wkwebview-reborn@2.0.0",
+      "react-native-device-info@0.29.1",
+      "react-native-version-number@0.3.6",
+      "appcenter-analytics@1.13.0",
+      "appcenter@1.13.0",
+      "appcenter-crashes@1.13.0",
+      "lottie-ios@3.1.5",
+      "lottie-react-native@3.3.2",
+      "react-native-android-wifi@0.0.41",
+      "react-native-fs@2.13.3",
+      "react-native-gesture-handler@1.4.1",
+      "react-native-network-info@4.0.1",
+      "react-native-orientation@3.1.3",
+      "react-native-sound@0.10.12",
+      "react-native-sentry@0.41.1",
+      "react-native-admob@2.0.0-beta.5",
+      "realm@2.28.1",
+      "react-native-fast-image@5.4.2",
+      "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/netinfo@3.2.1",
+      "@react-native-community/geolocation@2.0.2",
+      "react-native-fbsdk@1.0.4",
+      "react-native-default-preference@1.4.1"
+    ],
+    "targetJsDependencies": [
+      "react@16.8.6"
+    ]
+  },
+  {
     "platformVersion": "1000.0.0",
     "targetNativeDependencies": [
       "react-native@0.60.6",
