--- a/manifest.json
+++ b/manifest.json
@@ -1093,6 +1093,7 @@
       "react-native-gesture-handler@1.4.1",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
@@ -1148,6 +1149,7 @@
       "react-native-gesture-handler@1.4.1",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
@@ -1203,6 +1205,7 @@
       "react-native-gesture-handler@1.4.1",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
@@ -1258,6 +1261,7 @@
       "react-native-gesture-handler@1.4.1",
       "react-native-network-info@4.0.1",
       "react-native-orientation@3.1.3",
+      "react-native-pdf@6.1.1",
       "react-native-sound@0.10.12",
       "react-native-sentry@0.41.1",
       "react-native-admob@2.0.0-beta.5",
