--- a/manifest.json
+++ b/manifest.json
@@ -783,6 +783,7 @@
       "realm@2.27.0",
       "react-native-fast-image@5.3.0",
       "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -835,6 +836,7 @@
       "realm@2.27.0",
       "react-native-fast-image@5.3.0",
       "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -887,6 +889,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.5.0",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -939,6 +942,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -992,6 +996,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -1046,6 +1051,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -1100,6 +1106,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1156,6 +1163,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1212,6 +1220,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1268,6 +1277,7 @@
       "realm@2.28.1",
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
+      "@react-native-community/cameraroll@1.1.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
