Fix camera view dependency

--- a/plugins/ern_v0.14.0+/react-native-camera_v1.0.1+/config.json
+++ b/plugins/ern_v0.14.0+/react-native-camera_v1.0.1+/config.json
@@ -7,7 +7,7 @@
       "com.drewnoakes:metadata-extractor:2.9.1",
       "com.google.android.gms:play-services-vision:10.2.0",
       "com.android.support:exifinterface:25.3.1",
-      "com.google:cameraview:d5d9b0d925494ef451ce3eef3fdf14cc874d9baa"
+      "com.github.react-native-community:cameraview:d5d9b0d925494ef451ce3eef3fdf14cc874d9baa"
     ],
     "permissions": [
       "android.permission.CAMERA",
