Add plugin @react-native-community/datetimepicker@2.3.2
https://github.com/react-native-community/datetimepicker

--- a/manifest.json
+++ b/manifest.json
@@ -784,6 +784,7 @@
       "react-native-fast-image@5.3.0",
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -837,6 +838,7 @@
       "react-native-fast-image@5.3.0",
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -890,6 +892,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.5.0",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "react-native-default-preference@1.4.1"
     ],
@@ -943,6 +946,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -997,6 +1001,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -1052,6 +1057,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-default-preference@1.4.1"
@@ -1107,6 +1113,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1164,6 +1171,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1221,6 +1229,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
@@ -1278,6 +1287,7 @@
       "react-native-fast-image@5.4.2",
       "@react-native-community/async-storage@1.6.1",
       "@react-native-community/cameraroll@1.1.2",
+      "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/netinfo@3.2.1",
       "@react-native-community/geolocation@2.0.2",
       "react-native-fbsdk@1.0.4",
