--- a/manifest.json
+++ b/manifest.json
@@ -1268,6 +1268,7 @@
       "react-native-wkwebview-reborn@2.0.0",
       "react-native-device-info@5.4.0",
       "react-native-version-number@0.3.6",
+      "react-native-video@4.4.5",
       "appcenter-analytics@3.0.1",
       "appcenter@3.0.1",
       "appcenter-crashes@3.0.1",
@@ -1324,6 +1325,7 @@
       "react-native-wkwebview-reborn@2.0.0",
       "react-native-device-info@5.4.0",
       "react-native-version-number@0.3.6",
+      "react-native-video@4.4.5",
       "appcenter-analytics@3.0.1",
       "appcenter@3.0.1",
       "appcenter-crashes@3.0.1",
@@ -1398,6 +1400,7 @@
       "react-native-svg@12.1.0",
       "react-native-vector-icons@6.6.0",
       "react-native-version-number@0.3.6",
+      "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
       "react-native-wkwebview-reborn@2.0.0",
@@ -1454,6 +1457,7 @@
       "react-native-svg@12.1.0",
       "react-native-vector-icons@6.6.0",
       "react-native-version-number@0.3.6",
+      "react-native-video@4.4.5",
       "react-native-view-overflow@0.0.5",
       "react-native-view-shot@3.1.2",
       "react-native-wkwebview-reborn@2.0.0",
