Add iOS support for Firebase

--- a/plugins/ern_v0.44.0+/@react-native-firebase/crashlytics_v8.3.0+/config.json
+++ b/plugins/ern_v0.44.0+/@react-native-firebase/crashlytics_v8.3.0+/config.json
@@ -5,5 +5,12 @@
       "com.google.firebase:firebase-crashlytics",
       "com.google.firebase:firebase-crashlytics-ndk"
     ]
+  },
+  "ios": {
+    "requiresManualLinking": true,
+    "applyPatch": {
+      "patch": "crashlytics.patch",
+      "root": "node_modules/@react-native-firebase"
+    }
   }
 }
