Add missing react-native-firebase entries in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1419,6 +1419,9 @@
       "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/geolocation@2.0.2",
       "@react-native-community/netinfo@5.7.0",
+      "@react-native-firebase/analytics@7.4.1",
+      "@react-native-firebase/app@8.3.0",
+      "@react-native-firebase/crashlytics@8.3.0",
       "appcenter-analytics@3.0.1",
       "appcenter-crashes@3.0.1",
       "appcenter@3.0.1",
@@ -1476,6 +1479,9 @@
       "@react-native-community/datetimepicker@2.3.2",
       "@react-native-community/geolocation@2.0.2",
       "@react-native-community/netinfo@5.7.0",
+      "@react-native-firebase/analytics@7.4.1",
+      "@react-native-firebase/app@8.3.0",
+      "@react-native-firebase/crashlytics@8.3.0",
       "appcenter-analytics@3.0.1",
       "appcenter-crashes@3.0.1",
       "appcenter@3.0.1",
