Temporary fix to Firebase plugins configuration for Android

--- a/plugins/ern_v0.44.0+/@react-native-firebase/crashlytics_v8.3.0+/config.json
+++ b/plugins/ern_v0.44.0+/@react-native-firebase/crashlytics_v8.3.0+/config.json
@@ -2,8 +2,8 @@
   "android": {
     "root": "android",
     "dependencies": [
-      "com.google.firebase:firebase-crashlytics",
-      "com.google.firebase:firebase-crashlytics-ndk"
+      "com.google.firebase:firebase-crashlytics:17.1.0",
+      "com.google.firebase:firebase-crashlytics-ndk:17.1.0"
     ]
   },
   "ios": {
