--- a/plugins/ern_v0.44.0+/@react-native-firebase/analytics_v7.4.1+/config.json
+++ b/plugins/ern_v0.44.0+/@react-native-firebase/analytics_v7.4.1+/config.json
@@ -2,7 +2,7 @@
   "android": {
     "root": "android",
     "dependencies": [
-      "com.google.firebase:firebase-analytics"
+      "com.google.firebase:firebase-analytics:17.4.3"
     ],
     "copy": [
       {
