--- a/plugins/ern_v0.44.0+/@react-native-firebase/app_v8.3.0+/config.json
+++ b/plugins/ern_v0.44.0+/@react-native-firebase/app_v8.3.0+/config.json
@@ -2,9 +2,8 @@
   "android": {
     "root": "android",
     "dependencies": [
-      "implementation platform('com.google.firebase:firebase-bom:25.5.0')",
-      "com.google.firebase:firebase-core",
-      "com.google.firebase:firebase-common"
+      "com.google.firebase:firebase-core:17.4.3",
+      "com.google.firebase:firebase-common:19.3.1"
     ],
     "copy": [
       {
