--- a/manifest.json
+++ b/manifest.json
@@ -1513,6 +1513,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-screens@2.7.0",
       "react-native-search-bar@3.5.1",
       "react-native-sentry@0.43.2",
       "react-native-simple-toast@1.1.0",
@@ -1573,6 +1574,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-screens@2.7.0",
       "react-native-search-bar@3.5.1",
       "react-native-sentry@0.43.2",
       "react-native-simple-toast@1.1.0",
