--- a/manifest.json
+++ b/manifest.json
@@ -1514,6 +1514,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-restart@0.0.17",
       "react-native-safe-area-context@3.0.3",
       "react-native-screens@2.7.0",
       "react-native-search-bar@3.5.1",
@@ -1577,6 +1578,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-restart@0.0.20",
       "react-native-safe-area-context@3.0.3",
       "react-native-screens@2.7.0",
       "react-native-search-bar@3.5.1",
