Add react-native-reanimated manifest entry

--- a/manifest.json
+++ b/manifest.json
@@ -1518,6 +1518,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-reanimated@1.8.0",
       "react-native-restart@0.0.17",
       "react-native-safe-area-context@3.0.3",
       "react-native-screens@2.7.0",
@@ -1586,6 +1587,7 @@
       "react-native-pdf@6.1.1",
       "react-native-permissions@2.0.10",
       "react-native-photo-view@1.5.2",
+      "react-native-reanimated@1.8.0",
       "react-native-restart@0.0.20",
       "react-native-safe-area-context@3.0.3",
       "react-native-screens@2.7.0",
