--- a/plugins/ern_v0.45.0+/react-native_v0.62.0+/Podfile
+++ b/plugins/ern_v0.45.0+/react-native_v0.62.0+/Podfile
@@ -5,6 +5,10 @@ require_relative '{{{nodeModulesRelativePath}}}/@react-native-community/cli-plat
 {{{.}}}
 {{/extraPodspecsSources}}
 
+{{#extraPodfileStatements}}
+{{{.}}}
+{{/extraPodfileStatements}}
+
 target '{{{projectName}}}' do
   # Pods for {{{projectName}}}
   pod 'FBLazyVector', :path => "{{{nodeModulesRelativePath}}}/react-native/Libraries/FBLazyVector"
