Update react-native-fbads plugin

--- a/manifest.json
+++ b/manifest.json
@@ -1570,6 +1570,7 @@
       "react-native-electrode-bridge@1.5.27",
       "react-native-exif@0.4.0",
       "react-native-fast-image@8.1.5",
+      "react-native-fbads@7.0.5",
       "react-native-fbsdk@1.1.2",
       "react-native-fs@2.16.6",
       "react-native-gesture-handler@1.6.1",
@@ -1640,6 +1641,7 @@
       "react-native-electrode-bridge@1.5.27",
       "react-native-exif@0.4.0",
       "react-native-fast-image@8.1.5",
+      "react-native-fbads@7.0.5",
       "react-native-fbsdk@1.1.2",
       "react-native-fs@2.16.6",
       "react-native-gesture-handler@1.6.1",
@@ -1710,6 +1712,7 @@
       "react-native-electrode-bridge@1.5.27",
       "react-native-exif@0.4.0",
       "react-native-fast-image@8.1.5",
+      "react-native-fbads@7.0.5",
       "react-native-fbsdk@1.1.2",
       "react-native-fs@2.16.6",
       "react-native-gesture-handler@1.6.1",
@@ -1782,6 +1785,7 @@
       "react-native-electrode-bridge@1.5.27",
       "react-native-exif@0.4.0",
       "react-native-fast-image@8.1.5",
+      "react-native-fbads@7.0.5",
       "react-native-fbsdk@1.1.2",
       "react-native-fs@2.16.6",
       "react-native-gesture-handler@1.6.1",
