Update ERN Bridge to 1.6.0 in Dev Manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1856,6 +1856,8 @@
       "appcenter-analytics@4.4.3",
       "appcenter-crashes@4.4.3",
       "appcenter@4.4.3",
+      "ern-container-publisher-maven@2.0.0",
+      "ern-navigation@2.1.0",
       "lottie-ios@3.1.6",
       "lottie-react-native@3.3.2",
       "react-native@0.67.5",
@@ -1865,7 +1867,7 @@
       "react-native-camera@4.0.3",
       "react-native-code-push@6.2.0",
       "react-native-device-info@5.6.3",
-      "react-native-electrode-bridge@1.5.27",
+      "react-native-electrode-bridge@1.6.0",
       "react-native-exif@0.4.0",
       "react-native-fast-image@8.1.5",
       "react-native-fbads@7.0.5",
