Use ern-navigation@^2.1.0 for 0.50 and 1000

--- a/manifest.json
+++ b/manifest.json
@@ -1857,7 +1857,7 @@
       "appcenter-crashes@4.4.3",
       "appcenter@4.4.3",
       "ern-container-publisher-maven@2.0.0",
-      "ern-navigation@2.1.0",
+      "ern-navigation@^2.1.0",
       "lottie-ios@3.1.6",
       "lottie-react-native@3.3.2",
       "react-native@0.67.5",
@@ -1932,7 +1932,7 @@
       "appcenter-crashes@4.4.3",
       "appcenter@4.4.3",
       "ern-container-publisher-maven@2.0.0",
-      "ern-navigation@2.1.0",
+      "ern-navigation@^2.1.0",
       "lottie-ios@3.1.6",
       "lottie-react-native@3.3.2",
       "react-native@0.67.5",
